[gd_scene load_steps=11 format=3 uid="uid://dlvuxihtf5b5c"]

[ext_resource type="Script" uid="uid://d4njqkjc25rib" path="res://ui/main_menu/main_menu.gd" id="1_0o4t1"]
[ext_resource type="Texture2D" uid="uid://5tesw1yh3lug" path="res://assets/mainmenu/Home_bg.png" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://goo2fblg32ks" path="res://ui/hud/header.tscn" id="2_8qtwp"]
[ext_resource type="Texture2D" uid="uid://dt7l1dhcqsnpi" path="res://assets/Fun_Play.png" id="3_dy7ct"]
[ext_resource type="Texture2D" uid="uid://bqenb2rkyrfre" path="res://assets/Transportation.png" id="4_0o4t1"]
[ext_resource type="Texture2D" uid="uid://b1nd2nigrc7ke" path="res://assets/Dining.png" id="5_0k4wn"]
[ext_resource type="Texture2D" uid="uid://m8tkqd71y34q" path="res://assets/BuyHub.png" id="6_j5v2v"]
[ext_resource type="Texture2D" uid="uid://jjpnyb7p6c52" path="res://assets/Goverment.png" id="7_iotk1"]
[ext_resource type="Texture2D" uid="uid://d18rj13niy7sx" path="res://assets/npcs/anna/amy.jpg" id="8_w44g7"]
[ext_resource type="PackedScene" uid="uid://cl0w7jg75m3ht" path="res://ui/hud/bottom_menu.tscn" id="9_dy7ct"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
script = ExtResource("1_0o4t1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(340, 232)
texture = ExtResource("1_06t4h")
expand_mode = 2
stretch_mode = 5

[node name="Header" parent="." instance=ExtResource("2_8qtwp")]
layout_mode = 1
anchors_preset = 10
anchor_bottom = 0.0
offset_bottom = 128.0
grow_vertical = 1

[node name="HouseButton1" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 0.441667
anchor_top = 0.0726563
anchor_right = 0.81696
anchor_bottom = 0.283759
offset_right = 1777.79
offset_bottom = 1777.79
scale = Vector2(0.131939, 0.131939)
texture_normal = ExtResource("3_dy7ct")
metadata/_edit_use_anchors_ = true

[node name="HouseButton2" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 0.226389
anchor_top = 0.220313
anchor_right = 0.568678
anchor_bottom = 0.41285
offset_right = 1801.55
offset_bottom = 1801.55
scale = Vector2(0.120336, 0.120336)
texture_normal = ExtResource("4_0o4t1")
metadata/_edit_use_anchors_ = true

[node name="HouseButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 381.0
offset_right = 2344.0
offset_bottom = 2429.0
scale = Vector2(0.148455, 0.148455)
texture_normal = ExtResource("5_0k4wn")
metadata/_edit_use_anchors_ = true

[node name="HouseButton4" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 568.0
offset_right = 2196.0
offset_bottom = 2616.0
scale = Vector2(0.136188, 0.136188)
texture_normal = ExtResource("6_j5v2v")
metadata/_edit_use_anchors_ = true

[node name="HouseButton5" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 738.0
offset_right = 2366.0
offset_bottom = 2786.0
scale = Vector2(0.124969, 0.124969)
texture_normal = ExtResource("7_iotk1")
metadata/_edit_use_anchors_ = true

[node name="NpcSpawnLocations" type="Node" parent="."]

[node name="Marker2D1" type="Marker2D" parent="NpcSpawnLocations"]
position = Vector2(219, 1037)

[node name="Marker2D2" type="Marker2D" parent="NpcSpawnLocations"]
position = Vector2(549, 518)

[node name="Marker2D3" type="Marker2D" parent="NpcSpawnLocations"]
position = Vector2(527, 785)

[node name="Marker2D4" type="Marker2D" parent="NpcSpawnLocations"]
position = Vector2(201, 616)

[node name="Marker2D5" type="Marker2D" parent="NpcSpawnLocations"]
position = Vector2(242, 298)

[node name="Npc1" type="Sprite2D" parent="."]
position = Vector2(198, 275)
scale = Vector2(0.214156, 0.214156)
texture = ExtResource("8_w44g7")

[node name="Npc2" type="Sprite2D" parent="."]
position = Vector2(217, 1025)
scale = Vector2(0.208245, 0.208245)
texture = ExtResource("8_w44g7")

[node name="BottomMenu" parent="." instance=ExtResource("9_dy7ct")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_top = -153.0
offset_bottom = -3.0
grow_vertical = 0

[connection signal="pressed" from="HouseButton1" to="." method="_on_house_button_1_pressed"]
[connection signal="pressed" from="HouseButton2" to="." method="_on_house_button_2_pressed"]
[connection signal="pressed" from="HouseButton3" to="." method="_on_house_button_3_pressed"]
[connection signal="pressed" from="HouseButton4" to="." method="_on_house_button_4_pressed"]
[connection signal="pressed" from="HouseButton5" to="." method="_on_house_button_5_pressed"]
